# rfi-file-monitor-extras

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
rfi_file_monitor_extras/engines/: urls_engine.py
rfi_file_monitor_extras/files/: url.py
rfi_file_monitor_extras/operations/: local_copier.py  url_downloader.py
