[metadata]
name = rfi-file-monitor-extras
version = 0.0.01
description = Easy to use file monitor GUI with user-definable operations: Extra Functionality as Plugins
long_description = file: README.md
long_description_content_type = text/markdown
author = Laura Shemilt
author_email = Laura.Shemilt@rfi.ac.uk
license = Proprietary
classifiers =
    Development Status :: 3 - Alpha
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
url =
project_urls =
    GitHub = https://github.com/rosalindfranklininstitute/rfi-file-monitor-extras.git
    Bug-Tracker = https://github.com/rosalindfranklininstitute/rfi-file-monitor-extras/issues

[options]
include_package_data = True
install_requires =
    rfi-file-monitor >=0.2.9
packages = find:
python_requires = >=3.9
zip_safe = False

[options.entry_points]
rfi_file_monitor.operations =
    UrlDownloader=rfi_file_monitor_extras.operations.url_downloader:UrlDownloaderOperation
    LocalCopier=rfi_file_monitor_extras.operations.local_copier.py:LocalCopierOperation

rfi_file_monitor.engines =
    URLsEngine=rfi_file_monitor_extras.engines.urls_engine:URLsEngine

rfi_file_monitor.files =
     URL=rfi_file_monitor_extras.files.url:URL

[bdist_wheel]
universal = 1

[aliases]


[tool:pytest]
collect_ignore = ['setup.py']
